tests/NormalTests/paczka1/fuzzy1/19628196.err
Error in line 1: HuLm S479 29,0
Error in line 7: f8JimclYT A941 41,3
Error in line 6: SLH0HxYgLzl A831 80,6
Error in line 11: f8JimclYT A831 7,1
Error in line 5: A831 A831 75,7
Error in line 12: SLH0HxYgLzl A941 17,6
Error in line 27: SLH0HxYgLzl S479 222,4
Error in line 36: SLH0HxYgLzl A941 22,7
Error in line 35: JPyXKP9 A941 46,6
